ESQL: use Set.copyOf for the partition-name decoder
Address review: the returned set is read by membership only (contains /
isEmpty) by every consumer, and LocalExecutionPlanner re-wraps it in its
own LinkedHashSet, so the ordering guarantee bought nothing. Restore the
Set.copyOf the method used before it moved here, and drop the redundant
isEmpty() test -- Set.copyOf of an empty collection is already empty. The
stamp is written as List.copyOf(names), which rejects nulls, so copyOf
cannot NPE.